# G4X-viewer

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  404.html  CONTRIBUTING.md  DESKTOP_APP.md  LICENSE  README.md  eslint.config.js  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  vite.config.ts
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: auto-label-pr.yml  ci.yml  deploy-mkdocs.yml
DEVELOPMENT/: index.html
_core/stylesheets/: extra.css
contributing/: index.html
docs/: DEVELOPMENT.md  features.md  index copy.md  index.md  resources.md  usage.md
public/locales/: en.json
resources/: index.html
scripts/: CellMasksSchema.proto  CellMasksSchema_pb2.py  CellMasksSchema_pb2.pyi  ConvertCSVData.py  ConvertCellSegmentation.py  MetadataSchema.proto  MetadataSchema_pb2.py  MetadataSchema_pb2.pyi  VerifyPointsData.py
search/: search_index.json
src/: App.tsx  AvivatorTs.tsx  index.css  main.tsx  mui.d.ts  notistack.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AvivatorTs.tsx  AvivatorTs.types.ts  G4XViewer.tsx
src/config/: socialLinks.ts
src/demo-data/: demoSources.ts
src/hooks/: useBrightfieldImage.hook.ts  useDropzone.tsx  useHEImage.hook.ts  useImage.hook.ts  useLoader.hook.ts  useMetadata.hook.ts  useProteinImage.hook.ts
src/layers/: metadata-layer.ts  metadata-layer.types.ts
src/legacy/: utils.js
src/shared/: constants.ts  (+1 more)
(+597 files in other folders)
